# IN3110

./: README.md
assignment1/: gitconflict.txt  less_friendly_greeting.txt  myfirstcommit.txt
assignment2/: README.md  array_class.py  array_class2d.py  test.py  test_array.py
assignment3/: README.md  pyproject.toml  timing-report.txt
assignment3/instapy/: cli.py  numba_filters.py  numpy_filters.py  python_filters.py  testfilter.py  timing.py
assignment3/instapy.egg-info/: PKG-INFO  requires.txt
assignment3/test/: test_numba.py  test_numpy.py  test_python.py
assignment4/: README.md  example-plot.py  fetch_player_statistics.py  filter_urls.py  requesting_urls.py  time_planner.py
assignment4/tests/: test_fetch_player_statistics.py
assignment5/: README.md  app.py  http_cache.sqlite  strompris.py
assignment5/templates/: strompris.html
assignment5/tests/: test_strompris.py
